# gsx-integrator-commbus

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  build.ps1  gsx-integrator-commbus.xml  release-please-config.json
.github/workflows/: deploy.yml  merge-validator.yml  release.yml
PackageDefinitions/: gsx-integrator-commbus.xml
PackageSources/InGamePanels/: gsx-integrator-commbus.xml
PackageSources/html_ui/InGamePanels/GsxIntegratorCommBus/: index.html  panel_code.js  toolbar_code.js
PackageSources/modules/: .gitkeep
cmake/: wasi-msfs-toolchain.cmake
src/: Bridge.cpp  Bridge.h  Json.cpp  Json.h  Logger.h  Main.cpp
tools/: setup-msfs-sdk.ps1
tools/prebuilt/: gsx-integrator-commbus.spb
